--- a/templates/login.html
+++ b/templates/login.html
@@ -58,8 +58,8 @@
         <div class="container grid">
           <div class="box">
             <img src="images/logo2.jpeg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-              aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip </p>
     
             <div class="icon">
               <i class="fa fa-facebook-f"></i>
@@ -92,11 +92,12 @@
             <label>info@csi2132.ca</label> <br>
           </div>
         </div>
+        <div class="legal">
+            <p class="container">Copyright (c) 2022 Copyright Holder All Rights Reserved.</p>
+        </div>
     </footer>
     
-    <div class="legal">
-        <p class="container">Copyright (c) 2022 Copyright Holder All Rights Reserved.</p>
-    </div>
+
     
     
     
