Mise à jour des témoignages utilisateurs avec images

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
     <header>
         <div class="content flex_space">
             <div class="logo">
-                <img src="images/icare_logo.png" height="80" alt="Icare Logo">
+              <img src="../images/icare_logo.jpg" height="80" alt="Icare Logo">
+
             </div>
             <div class="navlinks">
               <ul id="menulist">
@@ -58,20 +59,30 @@
     <h2>Ce que disent nos utilisateurs</h2>
     
     <div class="testimonial-box">
-      <p class="quote">“Grâce à Icare, mon médecin peut suivre mes constantes vitales en temps réel. Je me sens en sécurité, même à distance.”</p>
-      <p class="author">— Jean, 68 ans</p>
+      <img src="../images/jean.jpg" alt="Jean" class="testimonial-img">
+      <div class="testimonial-text">
+        <p class="quote">“Grâce à Icare, mon médecin peut suivre mes constantes vitales en temps réel. Je me sens en sécurité, même à distance.”</p>
+        <p class="author">— Jean, 68 ans</p>
+      </div>
+    </div>
+    
+    
+    <div class="testimonial-box">
+      <img src="../images/marie.jpg" alt="Dr Marie Lefèvre" class="testimonial-img">
+      <div class="testimonial-text">
+        <p class="quote">“En tant que médecin, Icare m’offre une vue globale sur l’évolution de la santé de mes patients. C’est un outil indispensable aujourd’hui.”</p>
+        <p class="author">— Dr Marie Lefèvre, cardiologue</p>
+      </div>
     </div>
     
     <div class="testimonial-box">
-      <p class="quote">“En tant que médecin, Icare m’offre une vue globale sur l’évolution de la santé de mes patients. C’est un outil indispensable aujourd’hui.”</p>
-      <p class="author">— Dr Marie Lefèvre, cardiologue</p>
+      <img src="../images/amélie.jpeg" alt="Amélie" class="testimonial-img">
+      <div class="testimonial-text">
+        <p class="quote">“Ma mère vit seule. Grâce à Icare, je peux suivre son état de santé en temps réel depuis mon téléphone. C’est rassurant.”</p>
+        <p class="author">— Amélie, aidante familiale</p>
+      </div>
     </div>
     
-    <div class="testimonial-box">
-      <p class="quote">“Ma mère vit seule. Grâce à Icare, je peux suivre son état de santé en temps réel depuis mon téléphone. C’est rassurant.”</p>
-      <p class="author">— Amélie, aidante familiale</p>
-    </div>
-  </div>
 </section>
 
     <script>
