--- a/templates/patient_healthData.html
+++ b/templates/patient_healthData.html
@@ -309,7 +309,8 @@ footer .box label, footer .box p {
 <header>
     <div class="content flex_space">
         <div class="logo">
-            <img src="images/icare_logo.png" height="80" alt="Icare Logo">
+            <img src="../images/icare_logo.jpg" height="80" alt="Icare Logo">
+
         </div>
         <h2>Icare Health Monitoring</h2>
         <div class="navlinks">
