--- a/templates/caregiver.html
+++ b/templates/caregiver.html
@@ -11,7 +11,8 @@
     <header>
         <div class="content flex_space">
             <div class="logo">
-                <img src="images/icare_logo.png" height="80" alt="Icare Logo">
+                <img src="../images/icare_logo.jpg" height="80" alt="Icare Logo">
+
             </div>
             <div class="navlinks">
                 <ul id="menulist">
