--- a/templates/register.html
+++ b/templates/register.html
@@ -16,16 +16,16 @@
     <header>
         <div class="content flex_space">
             <div class="logo">
-                <img src="images/icare_logo.png" height="80" alt="Icare Logo">
+                <img src="../images/icare_logo.png" height="80" alt="Icare Logo">
             </div>
             <div class="navlinks">
               <ul id="menulist">
-                  <li><a href="dashboard.html" class="link active">Dashboard</a></li>
+                  <li><a href="index" class="link active">Dashboard</a></li>
                   <li><a href="#">Reports</a></li>
                   <li><a href="#">Monitoring</a></li>
                   <li><a href="#">Contact</a></li>
-                  <li><button class="btn white-btn" id="loginbtn" onclick="login()">LOGIN</button></li>
-                  <li><button class="btn white-btn" id="registerBtn" onclick="register()">REGISTER</button></li>
+                  <li><a href="login" class="btn white-btn" id="registerBtn">Login</a></li>
+                  <li><a href="register" class="btn white-btn" id="registerBtn">Register</a></li>
             </ul>
             </div>
         </div>
